--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
-    "nodemon": "^3.1.2"
+    "nodemon": "^3.1.2",
+    "ua-parser-js": "^1.0.38"
   }
 }
